# bebasin

./: Cargo.toml  FAQ.en.md  FAQ.md  LICENSE  README.en.md  README.md  SITES.md  azure-pipelines.yml  latest.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
misc/: header-backup  header-hosts  hosts
src/: app.rs  error.rs  grammar.pest  helpers.rs  hosts.rs  main.rs  os.rs  parser.rs  ui.rs  updater.rs  windows.rs
src/os/: mod.rs  windows.rs
