[package]
name = "bebasin"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.4.0"
crossterm = "0.14.1"
directories = "2.0.2"
nix = "0.16.1"
surf = "1.0.3"
webbrowser = "0.5.2"
pest = "2.1.3"
pest_derive = "2.1.0"

[dependencies.cursive]
# version = "0.13.0"
git = "https://github.com/gyscos/cursive.git"
default-features = false
features = ["crossterm-backend"]

[dependencies.winapi]
version = "0.3.8"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]
