[package]
name = "bebasin"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[dependencies]
crossterm = "0.14.1"
webbrowser = "0.5.2"
pest = "2.1.3"
pest_derive = "2.1.0"
md5 = "0.7.0"
curl = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
zip = "0.5"
itertools = "0.9.0"

[dependencies.cursive]
# version = "0.13.0"
git = "https://github.com/gyscos/cursive.git"
default-features = false
features = ["crossterm-backend"]

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.8"
features = ["handleapi", "processthreadsapi", "winnt", "securitybaseapi", "impl-default"]

[target.'cfg(unix)'.dependencies]
nix = "0.16.1"
